client public/private keys, api key response